@@ -38,61 +38,27 @@
 #include "EventTargetHeaders.h"
 #include "EventTargetInterfaces.h"
 #include "FrameLoaderClient.h"
-#include "Notification.h"
 #include "V8AbstractEventListener.h"
 #include "V8Binding.h"
 #include "V8Collection.h"
-#include "V8DOMApplicationCache.h"
 #include "V8DOMMap.h"
-#include "V8DOMWindow.h"
-#include "V8DedicatedWorkerContext.h"
 #include "V8EventListener.h"
 #include "V8EventListenerList.h"
-#include "V8EventSource.h"
-#include "V8FileReader.h"
-#include "V8FileWriter.h"
 #include "V8HTMLCollection.h"
 #include "V8HTMLDocument.h"
 #include "V8HiddenPropertyName.h"
-#include "V8IDBDatabase.h"
-#include "V8IDBRequest.h"
-#include "V8IDBTransaction.h"
 #include "V8IsolatedContext.h"
-#include "V8LocalMediaStream.h"
 #include "V8Location.h"
-#include "V8MediaStream.h"
-#include "V8MessageChannel.h"
 #include "V8NamedNodeMap.h"
-#include "V8Node.h"
 #include "V8NodeFilterCondition.h"
 #include "V8NodeList.h"
-#include "V8Notification.h"
-#include "V8PeerConnection.h"
 #include "V8Proxy.h"
-#include "V8SharedWorker.h"
-#include "V8SharedWorkerContext.h"
 #include "V8StyleSheet.h"
-#include "V8WebSocket.h"
-#include "V8Worker.h"
-#include "V8WorkerContext.h"
 #include "V8WorkerContextEventListener.h"
-#include "V8XMLHttpRequest.h"
 #include "WebGLContextAttributes.h"
 #include "WebGLUniformLocation.h"
 #include "WorkerContextExecutionProxy.h"
 #include "WrapperTypeInfo.h"
-
-#if ENABLE(SVG)
-#include "SVGElementInstance.h"
-#include "SVGPathSeg.h"
-#include "V8SVGElementInstance.h"
-#endif
-
-#if ENABLE(WEB_AUDIO)
-#include "V8AudioContext.h"
-#include "V8JavaScriptAudioNode.h"
-#endif
-
 #include <algorithm>
 #include <utility>
 #include <v8-debug.h>
